# amti-scraper

./: .gitignore  .mypy.ini  Makefile  README.md  mypy.ini  requirements.txt  setup.cfg
.github/workflows/: main.yml
amti/: __init__.py  amti.py
