[metadata]
name = amti-islands
version = attr: amti.__version__
author = Fionn Fitzmaurice
description = Object oriented islands in the South China Sea
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/fionn/amti-islands"
classifiers =
    Programming Language :: Python :: 3
    Development Status :: 3 - Alpha

[options]
zip_safe = true
pymodules = amti-islands
packages = find:
python_requires = >=3.8
install_requires =
    requests
    beautifulsoup4
    lxml

[options.extras_require]
dev =
    pylint
    mypy
